--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <style>
+        p{
+            color:limegreen;
+        }
+    </style> -->
+    <link rel="stylesheet" href="CSS/style.css">
+    <!-- there is no precedence btw internal & external css it's just their order of cascade which ever encountered latest will be applied.
+        Note: only identical properties of same selectors will be overwritten  other properties will be used as usual
+    
+    but inline css takes precedence over both of them as it is applied over element directly
+
+    commonly used external-->
+
 </head>
+
 <body>
     <p>I'm Learning CSS!</p>
 </body>
+
 </html>
