--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             color:limegreen;
         }
     </style> -->
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/color_style.css">
     <!-- there is no precedence btw internal & external css it's just their order of cascade which ever encountered latest will be applied.
         Note: only identical properties of same selectors will be overwritten  other properties will be used as usual
     
@@ -21,8 +21,8 @@
 </head>
 
 <body>
-    <h1>CSS Selectors
-        <h2>hr1</h2>
+    <h1>CSS Colors
+   
         
     </h1>
     <main>
