--- a/transform_transition_animations.html
+++ b/transform_transition_animations.html
@@ -10,9 +10,10 @@
 <body>
     
     <main>
-      <div class="square">🚀</div>
-      <div class="square">🔥</div>
+      <div class="square animate">🚀</div>
+      <div class="square animate">🔥</div>
       <div class="square animate">🌮</div>
+      
     </main>
 </body>
 </html>
